testsuite/tests/typecheck/should_fail/T23514a.stderr

T23514a.hs:9:17: error: [GHC-83865]
    • Expected kind ‘forall k. Maybe k’,
        but ‘Just Either’ has kind ‘Maybe (* -> * -> *)’
    • In the type ‘Just Either’
      In the type family declaration for ‘F’
